add in text animation

--- a/projects-1.html
+++ b/projects-1.html
@@ -8,9 +8,17 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
     <title>Animation-1</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <div class="streamer">
+        <div class="icon">
+            <h1 class="tittle">Hm Sadiqur Rahman
+                Sani ami Bari te asi </h1>
+            <img src="images/01.jpg" alt="">
+        </div>
+    </div>
 
 </body>
 
